[gd_scene load_steps=2 format=3 uid="uid://cl48slfx2dgx4"]

[ext_resource type="Script" uid="uid://bydpbwbf2ueh8" path="res://Scripts/UI/EndMenu.gd" id="1_ayxxa"]

[node name="EndMenu" type="Control" groups=["EndMenu"]]
process_mode = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ayxxa")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -4000.0
offset_top = -4000.0
offset_right = 4000.0
offset_bottom = 4000.0
color = Color(0.0156863, 0.0156863, 0.0156863, 0.392157)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_top = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Victory!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Clear Time: --:--"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer" groups=["EndMenu"]]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Button")
focus_neighbor_bottom = NodePath("../Settings/ShakeCheck")
theme_override_font_sizes/font_size = 48
text = "Next Level"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Button")
focus_neighbor_bottom = NodePath("../Settings/ShakeCheck")
theme_override_font_sizes/font_size = 48
text = "Restart"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Settings/LanguageDropdown")
focus_neighbor_bottom = NodePath("../Button2")
theme_override_font_sizes/font_size = 48
text = "Quit"

[node name="BlipSFX" type="AudioStreamPlayer2D" parent="."]
volume_db = -30.464

[node name="AcceptSFX" type="AudioStreamPlayer2D" parent="."]
volume_db = -30.464

[node name="BackSFX" type="AudioStreamPlayer2D" parent="."]
volume_db = -30.464

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="."]
max_distance = 200000.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button2" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button3" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_quit_pressed"]
[connection signal="finished" from="AudioStreamPlayer2D4" to="." method="_on_audio_stream_player_2d_4_finished"]
